Feat: Criação do testador da URL, casos de uso para obter um usuário pelo ID ou todos. Casos de uso de cadastrar role, e obter todas as roles