@@ -1,21 +1,14 @@
 package luis.goes.urlshortener.shared.mapper.user;
 
 import luis.goes.urlshortener.domain.entity.user.UserEntity;
-import luis.goes.urlshortener.presentation.dtos.user.UserRequestDTO;
 import luis.goes.urlshortener.presentation.dtos.user.UserResponseDto;
 import luis.goes.urlshortener.shared.mapper.IMapper;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Component
-public final class UserMapper implements IMapper<UserRequestDTO, UserResponseDto, UserEntity> {
-
-    @Override
-    public UserEntity toEntity(UserRequestDTO dto) {
-        return new UserEntity(dto.name(), dto.email(), dto.password());
-    }
+public final class UserMapper implements IMapper<UserResponseDto, UserEntity> {
 
     @Override
     public UserResponseDto toDto(UserEntity userEntity) {
@@ -23,23 +16,21 @@ public final class UserMapper implements IMapper<UserRequestDTO, UserResponseDto
                 userEntity.getId(),
                 userEntity.getName().getValue(),
                 userEntity.getUserCredentials().getEmail().getValue(),
+                userEntity.getUserRole().getName().getValue(),
+                userEntity.getUrls().stream().map(url -> new UserResponseDto.UserUrlDto(
+                        url.getOriginal(),
+                        url.getShortened()
+                )).toList(),
                 userEntity.getDateInfo().getCreatedAt(),
                 userEntity.getDateInfo().getUpdatedAt()
         );
     }
 
     @Override
-    public List<UserEntity> toEntityList(List<UserRequestDTO> userRequestDTOS) {
-        return userRequestDTOS.stream()
-                .map(this::toEntity)
-                .collect(Collectors.toList());
-    }
-
-    @Override
     public List<UserResponseDto> toDtoList(List<UserEntity> userEntities) {
         return userEntities.stream()
                 .map(this::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
 }
